--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@rails/webpacker": "5.4.3",
     "@tailwindcss/forms": "^0.5.3",
     "bootstrap": "5.2",
+    "chart.js": "^3.9.1",
+    "chartkick": "^4.2.0",
     "jquery": "^3.6.1",
     "jquery-ui": "^1.13.2",
     "slim-select": "^1.27.1",
