--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "@tailwindcss/forms": "^0.5.3",
-    "bootstrap": "5.2",
+    "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "chartkick": "^4.2.0",
     "jquery": "^3.6.1",
     "jquery-ui": "^1.13.2",
+    "popper.js": "^1.16.1",
     "slim-select": "^1.27.1",
     "turbolinks": "^5.2.0",
     "webpack": "4.46.0",
